--- a/my website/index.html
+++ b/my website/index.html
@@ -20,7 +20,8 @@
         <div class="collapse navbffdvar-collapse" id="navbarSupportedCtent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-curren,mnbvgfsrgthfht="page" href="#">Home</a>
+              <a class="nav-link active" aria-curren,mnbvgfsrgthfht="page" href="#">about us
+              </a>
             </li>
             <li class="na
             </li>
